# lili

./: .gitignore  Cargo.toml  README.md  TODO.md
scripts/: install.sh
src/: app.rs  main.rs  mission_layout.rs  shortcuts.rs
src/components/: actions.rs  button.rs  context_files.rs  header.rs  message_input.rs  mod.rs  project_info.rs  shortcuts.rs  text_input.rs
src/components/mission/: action_preview.rs  actions.rs  context_files.rs  message_input.rs  mod.rs  project_info.rs
src/pages/: mission.rs  mod.rs
src/utils/: list.rs  llm_tokens.rs  mod.rs
src/views/: add_context_files.rs  commit_temp_branch.rs  create_temp_branch.rs  mission.rs  mod.rs  sign_in.rs
