[workspace]

[package]
name = "lili-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossterm = "0.26.1"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
rustyline = "12.0.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
lilicore = { path = "../core" }
tokio = { version = "1.29.1", features = ["full"] }
jsonwebtoken = "8.3.0"
url-escape = "0.1.1"
open = "5.0.0"
tiktoken-rs = "0.5.0"
