[workspace]

[package]
name = "lili"
description = "AI Assistant for Developers"
version = "0.0.1"
edition = "2021"
authors = ["Giovanne"]
license = "Apache-2.0"

[[bin]]
name = "lili"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossterm = "0.26.1"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
rustyline = "12.0.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
lilicore = { path = "../core", version = "0.0.1" }
tokio = { version = "1.29.1", features = ["full"] }
jsonwebtoken = "8.3.0"
url-escape = "0.1.1"
open = "5.0.0"
tiktoken-rs = "0.5.0"

[package.metadata.bundle]
# name = "lili" # If this is not present, then it will use the name value from your Cargo.toml file.
identifier = "com.lili-project.cli"
# icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
# resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
resources = []
# copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "AI Assistant for Developers"
long_description = """
Lili is an AI assistant for developers. It helps you to generate code through natural language.
"""
# deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
# osx_frameworks = ["SDL2"]
deb_depends = []
osx_frameworks = []
